# synapse

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  schema.sql
backend/app/: config.py  database.py  main.py
backend/app/utils/: claude_service.py  embeddings.py  gemini_service.py  s3.py
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
browser-extension/icons/: create-icons.html
frontend/: .gitignore
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: ItemList.tsx  UploadForm.tsx
mcp/: README.md  pyproject.toml  server.py
